fix(TextInput): ensure autofill styling doesn't overlap floating label

--- a/src/Input/index.scss
+++ b/src/Input/index.scss
@@ -160,7 +160,9 @@
 
   input,
   textarea {
-    &::placeholder {
+    &:placeholder,
+    &:autofill {
+      background: transparent;
       color: var(--color-mediumGrey);
       font-weight: 400;
     }
